# office-rampage

./: CMakeLists.txt  README.md
scratch/: test  test.cpp
scratch/glinputtest/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  exec  glinputtest.cpp
scratch/gltest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fshader.glsl  gltest  gltest.cpp  load_shaders.hpp  vshader.glsl
scratch/maketest/: Makefile  test  test.cpp  test.h
src/: Makefile  config.hpp  load_shaders.cpp  main.cpp
